Demo DATN lan 2

--- a/Lab_Management.v1/src/main/resources/static/css/Header.css
+++ b/Lab_Management.v1/src/main/resources/static/css/Header.css
@@ -1,11 +1,12 @@
 /*Body*/
 
 body {
-    background: url("../images/login_bg.jpg");
+    /*background: url("../images/login_bg.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
-    background-size: cover;
+    background-size: cover;*/
+    background: url("../images/login_bg.jpg") no-repeat fixed center / cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -107,4 +108,106 @@ p {
 }
 header{
     background-color: transparent;
+}
+
+/************************************************/
+                /* Dark - Light */
+/***********************************************/
+
+@import url("https://fonts.googleapis.com/css?family=Lora:400,400i,700");
+:root {
+    --white: url("../images/login_bg.jpg") no-repeat fixed center / cover;
+    --black: black;
+    --gray: #fafafa;
+    --filter: brightness(100%);
+}
+
+[data-theme=dark] {
+    /*--white: rgba(33, 33, 33, 0.89);*/
+    --white: url("../images/login_bg.jpg") no-repeat fixed center / cover;
+    --black: white;
+    --gray: black;
+    --filter: brightness(30%);
+}
+
+.title + p {
+    color: var(--black);
+    font-size: 20px;
+}
+
+.theme-switch-wrapper {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    top: 12em;
+    right: 2em;
+    z-index: 1000;
+}
+
+.theme-switch {
+    display: inline-block;
+    height: 34px;
+    position: relative;
+    width: 60px;
+}
+
+.theme-switch input {
+    display: none;
+}
+
+.slider {
+    /*background-color: #999;*/
+    background-color: transparent;
+    /*background-color: rgba(255,255,255,0.6);*/
+    bottom: 0;
+    cursor: pointer;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    transition: 0.4s;
+}
+
+.slider:before {
+    background-color: rgba(217, 248, 255, 0.8);
+    bottom: 1.9px;
+    content: "";
+    height: 30px;
+    left: 0px;
+    position: absolute;
+    transition: 0.4s;
+    width: 30px;
+}
+
+input:checked + .slider {
+    /*background-color: #eee;*/
+    background-color: transparent;
+}
+
+input:checked + .slider:before {
+    background-color: rgba(0, 0, 0, 0.8);
+    transform: translateX(31px);
+}
+
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+.theme-switch .moon,
+.theme-switch .sun {
+    display: inline-block;
+    width: 28px;
+    /*height: 16px;*/
+    vertical-align: middle;
+}
+.theme-switch .moon{margin-top: 3px}
+.theme-switch .sun {margin-top: 2px}
+
+body{
+    background: var(--white);
+    color: var(--black);
+    filter: var(--filter);
 }
