--- a/Lab_Management.v1/src/main/resources/templates/admin/booking-detail-admin.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/booking-detail-admin.html
@@ -18,10 +18,23 @@
 <div th:replace="headernew::header"></div>
 <booking-detail>
     <style>
-        @import url("https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css");
+        /*@import url("https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css");
         @import url("/css/base2.min.css");
-        @import url("/css/styles.css");
-        .machine-block{border:1px solid #ccc;border-radius:8px;padding:20px;background-color:#f5f5f5;box-shadow:0 2px 4px rgba(0,0,0,0.1);transition:box-shadow 0.3s ease}
+        @import url("/css/styles.css");*/
+        :root {
+            --white: white;
+            --black: black;
+            --gray: #f5f5f5;
+            --gray2: rgba(230,239,255,0.6);
+        }
+
+        [data-theme=dark] {
+            --white: rgba(23, 23, 23, 0.91);
+            --black: white;
+            --gray: rgba(33, 33, 33, 0.89);
+            --gray2: rgba(37, 37, 37, 0.92);
+        }
+        .machine-block{border:1px solid #ccc;border-radius:8px;padding:20px;background-color:var(--gray);box-shadow:0 2px 4px rgba(0,0,0,0.1);transition:box-shadow 0.3s ease}
         .machine-block:hover{box-shadow:0 4px 8px rgba(0,15,255,0.6)}
         .machine-block h4{font-size:18px;font-weight:bold;margin-bottom:10px}
         .machine-block p{margin-bottom:5px}
@@ -30,13 +43,18 @@
         .machine-block img {max-width: 100%;max-height: 100%;}
         .remove-button{padding: unset; border: unset; font-weight: bold; margin-bottom: 10px}
         .remove-button:hover{color: red}
-        label{color: black; font-weight: bold;}
+        label, .card-title {color: var(--black); font-weight: bold;}
+        .booking-container{
+            /*background-color: var(--gray2); */
+            background-color: transparent;
+            padding: 2em; border-radius: 3em;
+        }
     </style>
     <!--<div th:replace="headernew::header"></div>-->
     <h1 style="margin-top: 50px; text-align: center;">CHI TIẾT ĐẶT PHÒNG THÍ NGHIỆM</h1><br>
 
-    <div style="background-color: rgba(230,239,255,0.6); padding: 2em; border-radius: 3em">
-        <form th:object="${bookingDTO}" th:action="@{'/Lab/admin/ShowBookingPendding/' + ${bookingDTO.getId}}" method="post" enctype="multipart/form-data">
+    <div class="booking-container">
+        <form th:object="${bookingDTO}" th:action="@{'/Lab/admin/ShowBookingPenddind/' + ${bookingDTO.getId}}" method="post">
             <div class="row justify-content-around p-2">
                 <div class="form-group col-5" >
                     <div class="form-group">
@@ -157,16 +175,16 @@
                 </div>
             </div>
             <!-- Submit button -->
-            <div class="row d-flex justify-content-center" th:if="${#strings.contains(#request.requestURI, '/Lab/admin/ShowBookingPendding')}">
+            <div class="row d-flex justify-content-center">
                 <button type="submit" class="btn btn-primary col-3 mx-2" onclick="return confirm('Bạn có chắc chắn muốn sửa?')">Sửa thông tin</button>
                 <button type="button" class="btn btn-success col-3 mx-2">Duyệt</button>
                 <button type="button" class="btn btn-danger col-3 mx-2">Hủy</button>
             </div>
-            <div class="row d-flex justify-content-center" th:if="${#strings.contains(#request.requestURI, '/Lab/myBookingDetail') && bookingDTO.confirm_Status == 'Đang chờ duyệt'}">
+            <!--<div class="row d-flex justify-content-center" th:if="${#strings.contains(#request.requestURI, '/Lab/myBookingDetail') && bookingDTO.confirm_Status == 'Đang chờ duyệt'}">
                 <button type="submit" class="btn btn-primary col-3 mx-2" onclick="return confirm('Bạn có chắc chắn muốn sửa?')">Sửa thông tin</button>
                 <button type="button" class="btn btn-success col-3 mx-2">Duyệt</button>
                 <button type="button" class="btn btn-danger col-3 mx-2">Hủy</button>
-            </div>
+            </div>-->
         </form>
         <br>
         <br>
@@ -301,15 +319,17 @@
             return trimmedArray;
         }
 
+        var username = [[${#authentication.name}]];
+
         $('.btn-success').click(function () {
             if (confirm('Bạn có chắc chắn muốn duyệt đơn đặt này?')) {
-                window.location.href = "/Lab/admin/ShowBookingPendding/Approve?bookingId=" + bookingId;
+                window.location.href = "/Lab/admin/ShowBookingPendding/Approve?bookingId=" + bookingId + '&username=' + username;
             }
         });
 
         $('.btn-danger').click(function () {
             if (confirm('Bạn có chắc chắn muốn hủy đơn này?')) {
-                window.location.href = "/Lab/admin/ShowBookingPendding/Cancel?bookingId=" + bookingId;
+                window.location.href = "/Lab/admin/ShowBookingPendding/Cancel?bookingId=" + bookingId + '&username=' + username;
             }
         });
 
