--- a/Lab_Management.v1/src/main/resources/templates/admin/lab-form.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/lab-form.html
@@ -18,6 +18,7 @@
     <h1 style="margin-top: 50px; text-align: center;">Thêm phòng thí nghiệm</h1><br>
     <div class="container">
         <form th:action="@{'/Lab/admin/Room/add'}" method="post" enctype="multipart/form-data">
+            <input type="hidden" name="username" th:value="${#authentication.name}">
             <div class="row">
 <!--                <div class="form-group">
                     <label for="image">Image:</label>
