--- a/Lab_Management.v1/src/main/resources/templates/security/access-denied.html
+++ b/Lab_Management.v1/src/main/resources/templates/security/access-denied.html
@@ -5,10 +5,12 @@
     <title>Access Denied</title>
 </head>
 <body>
-<h1>Access Denied</h1>
-<p>Bạn không có quyền truy cập vào trang này.</p>
-<p>Bạn có thể quay lại trang trước hoặc đăng nhập với tư cách người dùng có quyền truy cập.</p>
-<a href="/">Quay lại</a>
+<accessDenied>
+    <h1>Access Denied</h1>
+    <p>Bạn không có quyền truy cập vào trang này.</p>
+    <p>Bạn có thể quay lại trang trước hoặc đăng nhập với tư cách người dùng có quyền truy cập.</p>
+    <a href="/Lab/admin/Dashboard">Quay lại</a>
+</accessDenied>
 </body>
 </html>
 
