--- a/Lab_Management.v1/src/main/resources/templates/admin/Dashboard.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/Dashboard.html
@@ -22,11 +22,11 @@
 </head>
 <body>
 <dashboard>
+    <div class="d-flex justify-content-center align-content-center">
+        <h3 class="p-2" >YÊU CẦU ĐẶT PHÒNG</h3>
+    </div>
     <div class="col-lg-12 col-xl-12">
         <div class="main-card mb-3 card">
-        <div style="margin: auto;">
-            <h3 class="p-2 " >YÊU CẦU ĐẶT PHÒNG</h3>
-        </div>
             <div class="grid-menu grid-menu-3col">
                 <div class="no-gutters row">
                     <div class="col-sm-4" id="Approve">
@@ -84,6 +84,27 @@
             </div>
         </div>
     </div>
+    <h3 class="text-uppercase mb-3" style="text-align: center"> Top 3 Phòng thí nghiệm có điểm số cao nhất </h3>
+    <div class="main-card mb-5 card">
+        <div class="grid-menu grid-menu-3col">
+            <div class="no-gutters row">
+                <th:block th:each="labsOnLineAndScore : ${labsOnLineAndScores}">
+                    <div class="col-sm-4 lab-score ">
+                        <div class="widget-chart widget-chart-hover">
+                            <div class="icon-wrapper rounded-circle">
+                                <div class="icon-wrapper-bg"></div>
+                                <i class="lnr-apartment text-info"></i></div>
+                            <div class="widget-numbers font-size-xlg" >
+                                <p class="text-primary my-4" th:text="${labsOnLineAndScore.lab.labName}"></p>
+                                <pre class="text-primary my-4" th:text="''"></pre>
+                                <p class="text-score my-4">Điểm số: <span class="text-score" th:text="${#numbers.formatDecimal(labsOnLineAndScore.score, 1, 1, 'POINT')}"></span></p>
+                            </div>
+                        </div>
+                    </div>
+                </th:block>
+            </div>
+        </div>
+    </div>
     <div class="col-lg-12 col-xl-12">
         <div class="main-card mb-3 card">
             <div class="grid-menu grid-menu-2col">
@@ -131,7 +152,7 @@
                     <div class="col-sm-6 equi-management">
                         <div class="widget-chart widget-chart-hover">
                             <div class="icon-wrapper rounded-circle">
-                                <div class="icon-wrapper-bg bg-info"></div>
+                                <div class="icon-wrapper-bg bg-danger"></div>
                                 <i class="fa fa-hammer text-danger"></i>
                             </div>
                             <div class="widget-numbers font-size-xlg" >
@@ -145,21 +166,9 @@
             </div>
         </div>
         <div class="main-card mb-5 card">
-            <div class="grid-menu grid-menu-2col">
+            <div class="grid-menu grid-menu-3col">
                 <div class="no-gutters row">
-                    <div class="col-sm-6" id="Teacher-management">
-                        <div class="widget-chart widget-chart-hover">
-                            <div class="icon-wrapper rounded-circle">
-                                <div class="icon-wrapper-bg bg-primary"></div>
-                                <i class="fa fa-users text-warning"></i></div>
-                            <div class="widget-numbers font-size-xlg" >
-                                <p class="text-info my-4" th:text="'Số lượng giáo viên: ' + ${teachers}"></p>
-                                <pre class="text-primary my-4" th:text="''"></pre>
-                                <p class="text-info my-4" th:text="'Số người chịu trách nghiệm: ' + ${reservationist}"></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6" id="Manager-management">
+                    <div class="col-sm-4" id="Manager-management">
                         <div class="widget-chart widget-chart-hover">
                             <div class="icon-wrapper rounded-circle">
                                 <div class="icon-wrapper-bg bg-primary"></div>
@@ -171,26 +180,31 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-        <div class="main-card mb-5 card">
-            <div class="grid-menu grid-menu-4col">
-                <div class="no-gutters row">
-                    <th:block th:each="labsOnLineAndScore : ${labsOnLineAndScores}">
-                        <div class="col-sm-3 lab-score">
-                            <div class="widget-chart widget-chart-hover">
-                                <div class="icon-wrapper rounded-circle">
-                                    <div class="icon-wrapper-bg bg-primary"></div>
-                                    <i class="lnr-apartment text-primary"></i></div>
-                                <div class="widget-numbers font-size-xlg" >
-                                    <p class="text-primary my-4" th:text="${labsOnLineAndScore.lab.labName}"></p>
-                                    <pre class="text-primary my-4" th:text="''"></pre>
-                                    <p class="text-yellow my-4">Điểm số: <span class="text-danger" th:text="${labsOnLineAndScore.score}"></span></p>
-                                </div>
+                    <div class="col-sm-4" id="Teacher-management">
+                        <div class="widget-chart widget-chart-hover">
+                            <div class="icon-wrapper rounded-circle">
+                                <div class="icon-wrapper-bg bg-primary"></div>
+                                <i class="fa fa-users text-primary"></i></div>
+                            <div class="widget-numbers font-size-xlg" >
+                                <p class="text-info my-4" th:text="'Số lượng giáo viên: ' + ${teachers}"></p>
+                                <pre class="text-primary my-4" th:text="''"></pre>
+                                <p class="text-info my-4" th:text="'Số người chịu trách nghiệm: ' + ${reservationist}"></p>
                             </div>
                         </div>
-                    </th:block>
+                    </div>
+                    <div class="col-sm-4" id="Teacher-wait">
+                        <div class="widget-chart widget-chart-hover">
+                            <div class="icon-wrapper rounded-circle">
+                                <div class="icon-wrapper-bg bg-primary"></div>
+                                <i class="fa fa-users text-warning"></i></div>
+                            <div class="widget-numbers font-size-xlg" >
+                                <pre class="text-primary my-4" th:text="''"></pre>
+                                <p class="text-warning my-4" th:text="'Tài khoản chờ duyệt: ' + ${teacherwaits}"></p>
+                                <pre class="text-primary my-4" th:text="''"></pre>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -201,27 +215,34 @@
     <br>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script>
+    <script th:inline="javascript">
+        var username = [[${#authentication.name}]];
         $('#Approve').click(function () {
-            window.location.href = "/Lab/admin/LabBookingManagement/Approve";
+            window.location.href = "/Lab/admin/LabBookingManagement/Approve?username="+username;
         })
         $('#Pendding').click(function () {
-            window.location.href = "/Lab/admin/LabBookingManagement/Pendding";
+            window.location.href = "/Lab/admin/LabBookingManagement/Pendding?username="+username;
         })
         $('#Cancel').click(function () {
-            window.location.href = "/Lab/admin/LabBookingManagement/Cancel";
+            window.location.href = "/Lab/admin/LabBookingManagement/Cancel?username="+username;
         })
         $('.lab-management').click(function () {
-            window.location.href = "/Lab/admin/Room";
+            window.location.href = "/Lab/admin/Room?username="+username;
         })
         $('.equi-management').click(function () {
-            window.location.href = "/Lab/admin/Equipment";
+            window.location.href = "/Lab/admin/Equipment?username="+username;
         })
         $('#Teacher-management').click(function () {
             window.location.href = "/Lab/admin/Teacher";
         })
+        $('#Teacher-wait').click(function () {
+            window.location.href = "/Lab/admin/UserWait";
+        })
         $('#Manager-management').click(function () {
             window.location.href = "/Lab/admin/Manager";
+        })
+        $('.lab-score').click(function () {
+            window.location.href = "/Lab/admin/LabRankings";
         })
 
     </script>
