--- a/Lab_Management.v1/src/main/resources/templates/booking/my-booking.html
+++ b/Lab_Management.v1/src/main/resources/templates/booking/my-booking.html
@@ -18,6 +18,44 @@
 <div th:replace="headernew::header"></div>
 <main>
     <div class="container">
+        <!-- search bar with category -->
+        <div class="d-flex justify-content-center align-content-center my-3">
+            <div class="d-none d-lg-block col-lg-5 col-xl-4" style="background-color: rgba(230,239,255,0.6); border-radius: 1em; padding: 1em">
+                <div class="el-search-with-category-wrapper">
+                    <div class="product-search electio-filter-available electio-search-style-one electio-ajax-search-header-one" >
+                        <form th:action="@{'/Lab/mybooking?username='+${#authentication.name}+'&search=true'}" method="get" class="electio-search-box d-flex flex-row justify-content-between justify-content-center">
+                            <div>
+                                <input type="hidden" name="search" class="form-control" th:value="'true'">
+                                <input type="hidden" name="username" class="form-control" th:value="${#authentication.name}">
+                                <input type="date" name="datetimepicker" class="form-control" th:value="${datetimepicker}">
+                                <input style="min-width: 15em; border: black solid medium; margin: unset"
+                                       type="text" class="form-control text-dark" name="inputdatasearch"
+                                       th:value="${inputdatasearch}"
+                                       placeholder="Tìm kiếm theo tên phòng">
+                            </div>
+                            <div class="d-flex flex-column justify-content-center align-content-center">
+                                <button type="submit" style="margin: auto; border-radius: 2em"
+                                        value="Search" class="electio-ajax-search-btn-stl-one search-button">
+                                    <img src="/images/search-icon-1.png" style="max-width: 20em" alt="">
+                                </button>
+                                <div class="checkboxThree">
+                                    <input type="checkbox" th:checked="${AndOr}" id="checkboxThreeInput" name="AndOr" />
+                                    <label for="checkboxThreeInput"></label>
+                                    <style>
+                                        .checkboxThree { width: 160px; height: 44px; background: rgba(144, 149, 171, 0.64); margin: auto; border-radius: 50px; position: relative; }
+                                        .checkboxThree:before { content: 'và'; position: absolute; top: 12px; left: 13px; height: 2px; color: #0b0dca; font-size: 16px; font-weight: bold}
+                                        .checkboxThree:after { content: 'hoặc'; position: absolute; top: 12px; left: 101px; height: 2px; color: #0b0dca; font-size: 16px; font-weight: bold}
+                                        .checkboxThree label { display: block; width: 88px; height: 26px; border-radius: 50px; -webkit-transition: all .5s ease; -moz-transition: all .5s ease; -o-transition: all .5s ease; -ms-transition: all .5s ease; transition: all .5s ease; cursor: pointer; position: absolute; top: 9px; z-index: 1; left: 12px; background: #ddd; }
+                                        .checkboxThree input[type=checkbox]:checked + label { left: 55px; background: #26ca28; }
+                                    </style>
+                                </div>
+                            </div>
+                        </form>
+                        <div class="search-results electio-search-result"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="row">
             <div class="col-12">
                 <form action="#" >
@@ -50,7 +88,10 @@
                                 <div class="card-body">
                                     <div>
                                         <span class="lab-info text-primary" th:text="'Tên '+${booking.experimentReport.reportType} +': '"> </span>
-                                        <span class="lab-info" th:text="${booking.content.name}"></span>
+                                        <span class="lab-info span-name" th:text="${booking.content.name}"></span>
+                                        <style>
+                                            .span-name {display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp: 2;overflow: hidden;margin: unset;}
+                                        </style>
                                     </div>
                                     <br>
                                     <div>
@@ -77,7 +118,7 @@
 <br>
 <br>
 <script th:inline="javascript">
-
+    checkuser([[${#authentication.name}]])
 </script>
 <script src="/js/my-booking.js"></script>
 <script src="/js/noticePopUp.js"></script>
