--- a/Lab_Management.v1/src/main/resources/templates/headernew.html
+++ b/Lab_Management.v1/src/main/resources/templates/headernew.html
@@ -55,7 +55,7 @@
     <!--  header middle -->
     <div class="el-middle-header container container-xxxl">
         <div>
-            <a href="/Lab">
+            <a href="/Lab?RedirectLabAdmin=false">
                 <img src="/images/logo_hvktqs.png" alt="logo" class="img-full-ss logo"/>
             </a>
         </div>
@@ -63,7 +63,7 @@
             <!-- logo:sm device -->
             <div class="col-5 col-lg-2 d-lg-block d-xl-none">
                 <div class="logo-wrapper">
-                    <a href="/Handshop/list"
+                    <a href="/Lab?RedirectLabAdmin=false"
                     ><img
                             th:src="'/images/logo_hvktqs.png'"
                             alt="logoxx"
@@ -80,7 +80,7 @@
                         </a>
                     </div>
                     <div class="d-none d-lg-flex flex-column">
-                        <a href="/Lab">
+                        <a href="/Lab?RedirectLabAdmin=false">
                         <strong>
                             <span class="title">Đặt lịch phòng thí nghiệm</span>
                         </strong>
@@ -111,7 +111,32 @@
                 </div>
             </div>
             <!-- info -->
-            <div class="col-7 col-lg-5 col-xl-4 d-flex justify-content-end justify-content-lg-end el1-mobile-info-wrapper">
+            <div class="col-7 col-lg-5 col-xl-4 d-flex justify-content-end justify-content-lg-between el1-mobile-info-wrapper">
+                <div class="info-box account-box me-2 align-items-center" id="DarkLight">
+                    <!-- Dark & Light -->
+                </div>
+                <div class="info-box account-box me-2 align-items-center" id="search-box">
+                    <!-- search bar with category -->
+                    <div class="d-none d-lg-block col-lg-5 col-xl-4" th:unless="${#strings.contains(#request.requestURI, '/Lab/mybooking')}">
+                        <div class="el-search-with-category-wrapper">
+                            <div
+                                    class="product-search electio-filter-available electio-search-style-one electio-ajax-search-header-one"
+                            >
+                                <form th:action="@{/Lab/search}" method="post" class="electio-search-box d-flex flex-row justify-content-between justify-content-center">
+                                    <!--<div style=" border: black">-->
+                                    <input style="min-width: 15em; border: black solid medium; margin: unset"
+                                           type="text" class="form-control text-dark" name="inputdatasearch" placeholder="Tìm kiếm tên hoặc vị trí phòng">
+                                    <!--</div>-->
+                                    <button type="submit" value="Search" class="electio-ajax-search-btn-stl-one search-button bg-transparent">
+                                        <img src="/images/search-icon-1.png" style="max-width: 20em" alt="">
+                                    </button>
+                                    <!--<input type="hidden" name="inputdatasearch" value="product" />-->
+                                </form>
+                                <div class="search-results electio-search-result"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
                 <div class="info-box account-box me-2 align-items-center" id="account-box">
                     <a href="/login" th:unless="${#authorization.expression('isAuthenticated()')}">
@@ -184,7 +209,7 @@
                                       style="font-size: 1em; display: inline-block; max-width: 10ch; overflow: hidden; text-overflow: ellipsis;"
                                       th:data-nameUser="${#authentication.name}"></span></a>
                             </li>
-                            <li class=""><a sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_MANAGER')" th:href="'/Lab/admin/Dashboard'" class="ico-cart">
+                            <li class=""><a sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_MANAGER')" th:href="'/Lab/admin/Dashboard?username='+${#authentication.name}" class="ico-cart">
                                 <!--<span style="align-self: center">Xin trào: </span><br>-->
                                 <span class="title" sec:authentication="name"
                                       style="font-size: 1em; display: inline-block; max-width: 10ch; overflow: hidden; text-overflow: ellipsis;"
@@ -203,6 +228,32 @@
     </div>
     <br>
     <br>
+    <div class="theme-switch-wrapper" >
+        <label class="theme-switch" for="checkbox" style="background-color: rgba(255,255,255,0.2); border-radius: 34px; padding: 1.5px">
+            <div class="d-flex justify-content-between flex-row">
+                <div class="icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="moon text-warning">
+                        <path fill-rule="evenodd" d="M9.528 1.718a.75.75 0 01.162.819A8.97 8.97 0 009 6a9 9 0 009 9 8.97 8.97 0 003.463-.69.75.75 0 01.981.98 10.503 10.503 0 01-9.694 6.46c-5.799 0-10.5-4.701-10.5-10.5 0-4.368 2.667-8.112 6.46-9.694a.75.75 0 01.818.162z" clip-rule="evenodd"></path>
+                    </svg>
+                </div>
+                <div class="icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="sun text-warning">
+                        <path d="M12 2.25a.75.75 0 01.75.75v2.25a.75.75 0 01-1.5 0V3a.75.75 0 01.75-.75zM7.5 12a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM18.894 6.166a.75.75 0 00-1.06-1.06l-1.591 1.59a.75.75 0 101.06 1.061l1.591-1.59zM21.75 12a.75.75 0 01-.75.75h-2.25a.75.75 0 010-1.5H21a.75.75 0 01.75.75zM17.834 18.894a.75.75 0 001.06-1.06l-1.59-1.591a.75.75 0 10-1.061 1.06l1.59 1.591zM12 18a.75.75 0 01.75.75V21a.75.75 0 01-1.5 0v-2.25A.75.75 0 0112 18zM7.758 17.303a.75.75 0 00-1.061-1.06l-1.591 1.59a.75.75 0 001.06 1.061l1.591-1.59zM6 12a.75.75 0 01-.75.75H3a.75.75 0 010-1.5h2.25A.75.75 0 016 12zM6.697 7.757a.75.75 0 001.06-1.06l-1.59-1.591a.75.75 0 00-1.061 1.06l1.59 1.591z"></path>
+                    </svg>
+                </div>
+            </div>
+            <input type="checkbox" id="checkbox" />
+            <div class="slider round"></div>
+        </label>
+    </div>
+    <!--CORE-->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.bundle.min.js"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/metismenu"></script>
+    <script src="/js/header.js"></script>
 </header>
 </body>
 </html>
